--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+<section class="bg-main-light shadow p-2 my-2 rounded-4 ">
+   <div class="container">
+     <h1 class="h2 text-main">Register now</h1>
+
+    <form action="">
+      
+         <div class="my-2">
+            <label for="email">email</label>
+            <input type="email" class="form-control" id="email">
+        </div>
+       
+         <div class="my-2">
+            <label for="passowrd">passowrd</label>
+            <input type="password" class="form-control" id="passowrd">
+        </div>
+        
+        
+        <button class="btn-main ms-auto d-block">login</button>
+    </form>
+   </div>
+</section>
