--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -1,1 +1,69 @@
-<p>nav-blank works!</p>
+<nav class="navbar navbar-expand-lg bg-body-tertiary ">
+  <div class="container-fluid">
+    <a class=" mx-4 navbar-brand"  routerLink="home"  href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        
+       
+        <li class="nav-item dropdown">
+          <a class=" mx-4 nav-link dropdown-toggle" href="#" routerLink="about"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+           about
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="center-birth" routerLinkActive="active-link" href="#">center birth</a></li>
+            <li><a class="dropdown-item" routerLink="center-goals" routerLinkActive="active-link" href="#">center goals</a></li>
+            
+            
+          </ul>
+        </li>
+
+         <li class="nav-item dropdown">
+          <a class="mx2 nav-link dropdown-toggle" href="#" role="button" routerLinkActive="active-link" data-bs-toggle="dropdown" aria-expanded="false">
+            management
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#" routerLink="leader-word" routerLinkActive="active-link" >leader word</a></li>
+            <li><a class="dropdown-item" href="#"routerLink="jobs" routerLinkActive="active-link">Another action</a></li>
+            
+            
+          </ul>
+        </li>
+
+         <li class="nav-item dropdown">
+          <a class="mx2 nav-link dropdown-toggle" href="#" role="button" routerLinkActive="active-link" data-bs-toggle="dropdown" aria-expanded="false">
+            services
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#"  routerLinkActive="active-link"  routerLink="courses" >courses</a></li>
+            <li><a class="dropdown-item" href="#"  routerLinkActive="active-link"  routerLink="workshops" >work shops</a></li>
+            
+            
+          </ul>
+
+          <li class="nav-item">
+          <a class=" mx-4 nav-link active" routerLink="jobs" routerLinkActive="active-link" aria-current="page" href="#">jobs</a>
+        </li>
+       
+
+         <li class="nav-item">
+          <a class="nav-link active mx-4" aria-current="page"  routerLink="voluntering" routerLinkActive="active-link"href="#">voluntering</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link active mx-4" aria-current="page" routerLink="contact" routerLinkActive="active-link" href="#">contact us</a>
+        </li>
+        
+      </ul>
+     <ul class="ms-auto navbar-nav">
+
+         <li class="nav-item ">
+          <a class="nav-link active mx-4  " aria-current="page" routerLink="signout" routerLinkActive="active-link" href="#">sign-out</a>
+        </li>
+
+        
+     </ul>
+    </div>
+  </div>
+</nav>
