--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,30 @@
-<p>register works!</p>
+<section class="bg-main-light shadow p-2 my-2 rounded-4 ">
+   <div class="container">
+     <h1 class="h2 text-main">Register now</h1>
+
+    <form action="">
+        <div class="my-2">
+            <label for="name">name</label>
+            <input type="text" class="form-control" id="name">
+        </div>
+         <div class="my-2">
+            <label for="email">email</label>
+            <input type="email" class="form-control" id="email">
+        </div>
+         <div class="my-2">
+            <label for="phone">phone</label>
+            <input type="tel" class="form-control" id="phone">
+        </div>
+         <div class="my-2">
+            <label for="passowrd">passowrd</label>
+            <input type="password" class="form-control" id="passowrd">
+        </div>
+         <div class="my-2">
+            <label for="repassword">repassword</label>
+            <input type="password" class="form-control" id="repassword">
+        </div>
+        
+        <button class="btn-main ms-auto d-block">register</button>
+    </form>
+   </div>
+</section>
