--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,5 +1,6 @@
 
 <app-nav-auth></app-nav-auth>
 
-<router-outlet></router-outlet>
+<div class="container"><router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
