nav and style edit

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,14 +4,28 @@
     <owl-carousel-o [options]="customOptionsTop">
       <ng-template carouselSlide>
         <img
-          src="../../../assets/images/team 1.jpg"
+          src="./assets/images/team 1.jpg"
           class="carousel-img"
           alt=""
         />
       </ng-template>
       <ng-template carouselSlide>
         <img
-          src="../../../assets/images/team 1.jpg"
+          src="./assets/images/team 2.jpg"
+          class="carousel-img"
+          alt=""
+        />
+      </ng-template>
+      <ng-template carouselSlide>
+        <img
+          src="./assets/images/team 3.jpg"
+          class="carousel-img"
+          alt=""
+        />
+      </ng-template>
+      <ng-template carouselSlide>
+        <img
+          src="./assets/images/team 4.jpg"
           class="carousel-img"
           alt=""
         />
