--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
     <div class="row g-4">
       <div class="col-lg-4 col-md-6">
         <img
-          src="../../../assets/images/logo UCCD.jpg"
+          src="./assets/images/logo UCCD.jpg"
           alt="UCCD Logo"
           class="mb-3"
           width="140"
