--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 
 :root {
-  --main-color: #0aad0a;
+  --main-color: #3572A5;
   --light-color: #f0f3f2;
   --shadow: rgba(145, 158, 171, 0.2) 0px 2px 4px -1px,
     rgba(145, 158, 171, 0.14) 0px 4px 5px 0px,
