--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,21 +1,49 @@
 <section class="bg-main-light shadow p-2 my-2 rounded-4 ">
    <div class="container">
-     <h1 class="h2 text-main">Register now</h1>
+     <h1 class="h2 text-main">login now</h1>
 
-    <form action="">
-      
-         <div class="my-2">
-            <label for="email">email</label>
-            <input type="email" class="form-control" id="email">
-        </div>
+    <form [formGroup]="loginForm" (ngSubmit)="loginSubmit()">
        
          <div class="my-2">
-            <label for="passowrd">passowrd</label>
-            <input type="password" class="form-control" id="passowrd">
+            <label for="email">email</label>
+            <input type="email" class="form-control" id="email" formControlName="email">
+              @if (loginForm.get('email')?.errors &&(loginForm.get('email')?.touched||loginForm.get('email')?.dirty)) {
+                <div class="alert-danger alert w-50 ">
+                    @if (loginForm.get('email')?.getError('required')) {
+                        <p class="m-0">* email Is Required</p>
+                    }
+                    @else if (loginForm.get('email')?.getError('email')) {
+                        <p class="m-0">* email Is not valid</p>
+                    }
+                    </div>
+            }  
         </div>
-        
-        
-        <button class="btn-main ms-auto d-block">login</button>
-    </form>
+      
+         <div class="my-2">
+            <label for="passowrd">passowrd</label>
+                        <input type="password" class="form-control" id="password"formControlName="password">
+            @if (loginForm.get('password')?.errors && loginForm.get('password')?.touched )
+             { <div class="alert-danger alert w-50 ">
+                    @if (loginForm.get('password')?.getError('required')) {
+                        <p class="m-0">* password Is Required</p>
+                    }
+                    @else if (loginForm.get('password')?.getError('pattern')) {
+                        <p class="m-0">* password Is not valid</p>
+                    }
+                    </div>
+            }
+               
+        </div>
+   
+        <button [disabled]="loginForm.invalid || isLoading"  type="submit" class="btn-main ms-auto d-block">login
+            @if (isLoading) {
+                <span><i class="fas fa-spin fa-spinner"></i></span>
+            }
+        </button>
+@if (msgError) {
+            <p class="alert alert-danger w-50 m-0 ">{{msgError}}</p>
+
+}    </form>
    </div>
-</section>
+</section>  
+
