--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -18,14 +18,14 @@
           the labor market.
         </p>
         <div class="social-links mt-3">
-          <a href="#" class="text-white me-3"
-            ><i class="fab fa-facebook-f"></i
+          <a href="https://web.facebook.com/uccd.usc/?locale=ar_AR&_rdc=1&_rdr#" class="text-white me-3" target="_blank"
+            ><i class="fab fa-facebook-f"> </i
           ></a>
-          <a href="#" class="text-white me-3"
+          <a href="#" class="text-white me-3" target="_blank"
             ><i class="fab fa-linkedin-in"></i
           ></a>
-          <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-white"><i class="fab fa-whatsapp"></i></a>
+          <a href="#" class="text-white me-3" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://api.whatsapp.com/send?phone=201221925650" class="text-white" target="_blank"><i class="fab fa-whatsapp"></i></a>
 
         </div>
       </div>
@@ -34,7 +34,7 @@
         <h5 class="fw-bold mb-4">Quick Links</h5>
         <ul class="list-unstyled footer-links">
           <li class="mb-2">
-            <a href="#" class="text-white-50 text-decoration-none">Home</a>
+            <a href="#" class="text-white-50 text-decoration-none ">Home</a>
           </li>
           <li class="mb-2">
             <a href="#" class="text-white-50 text-decoration-none"
