--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,19 +4,37 @@
 
     <form [formGroup]="registerForm" (ngSubmit)="registerSubmit()">
         <div class="my-2">
-            <label for="name">name</label>
-            <input type="text" class="form-control" id="name" formControlName="name">
+            <label for="name">first name</label>
+            <input type="text" class="form-control" id="firstName" formControlName="firstName">
 
-            @if (registerForm.get('name')?.errors && (registerForm.get('name')?.touched||registerForm.get('name')?.dirty)) {
+            @if (registerForm.get('firstName')?.errors && (registerForm.get('firstName')?.touched||registerForm.get('firstName')?.dirty)) {
                 <div class="alert-danger alert w-50 ">
-                    @if (registerForm.get('name')?.getError('required')) {
-                        <p class="m-0">* Name Is Required</p>
+                    @if (registerForm.get('firstName')?.getError('required')) {
+                        <p class="m-0">* firstName Is Required</p>
                     }
-                    @else if (registerForm.get('name')?.getError('minlength')) {
-                        <p class="m-0">* Name should be more than or equal 3 chars</p>
+                    @else if (registerForm.get('firstName')?.getError('minlength')) {
+                        <p class="m-0">* firstName should be more than or equal 3 chars</p>
                     }
-                    @else if (registerForm.get('name')?.getError('maxlength')) {
-                        <p class="m-0">* Name should be less than or equal 20 chars</p>
+                    @else if (registerForm.get('firstName')?.getError('maxlength')) {
+                        <p class="m-0">* firstName should be less than or equal 20 chars</p>
+                    }
+                    </div>
+            }
+            </div>
+             <div class="my-2">
+            <label for="name">last name</label>
+            <input type="text" class="form-control" id="lastName" formControlName="lastName">
+
+            @if (registerForm.get('lastName')?.errors && (registerForm.get('lastName')?.touched||registerForm.get('lastName')?.dirty)) {
+                <div class="alert-danger alert w-50 ">
+                    @if (registerForm.get('lastName')?.getError('required')) {
+                        <p class="m-0">* lastName Is Required</p>
+                    }
+                    @else if (registerForm.get('lastName')?.getError('minlength')) {
+                        <p class="m-0">* lastName should be more than or equal 3 chars</p>
+                    }
+                    @else if (registerForm.get('lastName')?.getError('maxlength')) {
+                        <p class="m-0">* lastName should be less than or equal 20 chars</p>
                     }
                     </div>
             }
@@ -39,14 +57,14 @@
         </div>
          <div class="my-2">
             <label for="phone">phone</label>
-            <input type="tel" class="form-control" id="phone"formControlName="phone">
-             @if (registerForm.get('phone')?.errors &&registerForm.get('phone')?.touched  &&(registerForm.get('phone')?.touched||registerForm.get('phone')?.dirty) ) {
+            <input type="tel" class="form-control" id="phoneNumber"formControlName="phoneNumber">
+             @if (registerForm.get('phoneNumber')?.errors &&registerForm.get('phoneNumber')?.touched  &&(registerForm.get('phoneNumber')?.touched||registerForm.get('phoneNumber')?.dirty) ) {
                 <div class="alert-danger alert w-50 ">
-                    @if (registerForm.get('phone')?.getError('required')) {
-                        <p class="m-0">* phone Is Required</p>
+                    @if (registerForm.get('phoneNumber')?.getError('required')) {
+                        <p class="m-0">* phoneNumber Is Required</p>
                     }
-                    @else if (registerForm.get('phone')?.getError('pattern')) {
-                        <p class="m-0">* Enter valid phone </p>
+                    @else if (registerForm.get('phoneNumber')?.getError('pattern')) {
+                        <p class="m-0">* Enter valid phoneNumber </p>
                     }
                     </div>
             }
@@ -66,7 +84,7 @@
             }
                
         </div>
-         <div class="my-2">
+         <!-- <div class="my-2">
             <label for="repassword">repassword</label>
             <input type="password" class="form-control" id="repassword" formControlName="rePassword">
          @if (registerForm.getError("mismatch") && registerForm.get('rePassword')?.touched) {
@@ -74,7 +92,7 @@
           }
          
         </div>
-        
+         -->
         <button [disabled]="registerForm.invalid || isLoading"  type="submit" class="btn-main ms-auto d-block">register
             @if (isLoading) {
                 <span><i class="fas fa-spin fa-spinner"></i></span>
@@ -83,7 +101,7 @@
 @if (msgError) {
             <p class="alert alert-danger w-50 m-0 ">{{msgError}}</p>
 
-}    </form>
+   }   </form>
    </div>
 </section>  
 
