--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,7 +78,7 @@ a:hover {
   background-color: #ccc;
 }
 .btn-main:hover {
-  background-color: #11bd11;
+  background-color:var(--main-color);
 }
 // alaa added
 .dropdown-item:hover,
