--- a/src/app/components/courses/courses.component.html
+++ b/src/app/components/courses/courses.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="d-flex justify-content-between align-items-center">
       <button class="btn-main">Enroll Now</button>
-      <span class="cursor-pointer text-main fs-4"><i class="fa-solid fa-heart-circle-plus"></i></span>
+      <span class="cursor-pointer text-main fs-4"><i class="fa-solid fa-heart-circle-plus" (click)="addToWishlist(course.id)"></i></span>
     </div>
   </div>
 </div>
