--- a/src/app/components/wish-list/wish-list.component.html
+++ b/src/app/components/wish-list/wish-list.component.html
@@ -1,1 +1,27 @@
-<p>wish-list works!</p>
+<div class="container my-5">
+  <h2 class="text-main fw-bold mb-4"> My wishList</h2>
+
+  <div class="row g-4">
+    @for (item of wishItems; track item.id) {
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm border-0">
+          <div class="card-body">
+            <h5 class="card-title fw-bold">{{ item.courseName }}</h5>
+            
+            <div class="d-flex justify-content-between align-items-center mt-3">
+              <span class="text-primary fs-5 fw-bold">{{ item.price }} EGP</span>
+              
+              <button class="btn btn-sm btn-outline-danger">
+                <i class="fa-solid fa-trash " (click)="remove(item.courseId)"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    } @empty {
+      <div class="col-12 text-center py-5">
+        <p class="text-muted ">wishList is empty</p>
+      </div>
+    }
+  </div>
+</div>
