--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<section class="bg-main-light shadow p-2 my-2 rounded-4 ">
-   <div class="container">
+<section class="bg-main-light shadow p-2 my-5 rounded-4 container">
+   <div class="container ">
      <h1 class="h2 text-main">login now</h1>
 
     <form [formGroup]="loginForm" (ngSubmit)="loginSubmit()">
